[project]
name = "string-authority"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colormath>=3.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "jsonschema>=4.24.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.4",
]
