[project]
name = "string-authority"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "colormath>=3.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "sa-models",
    "jsonschema>=4.24.0",
    "pillow>=12.1.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
]

[tool.uv.sources]
sa-models = { path = "../sa-models", editable = true }
